[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprite/Moon.png" type="Texture" id=1]
[ext_resource path="res://Music/StartGame.wav" type="AudioStream" id=2]
[ext_resource path="res://Scene/Buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Buttons/StartGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/menu/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 200.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="Menu/Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -21.5
margin_right = 106.0
margin_bottom = 21.5
custom_fonts/font = SubResource( 1 )
text = "MOON SHOT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 204.0
margin_right = 1040.0
margin_bottom = 394.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1040.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="StartGame" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1040.0
margin_bottom = 60.0
scene_to_load = "res://Scene/Levels/Level1.tscn"

[node name="Options" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 65.0
margin_right = 1040.0
margin_bottom = 125.0
scene_to_load = "res://Scene/menu/OptionsMenu.tscn"

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 130.0
margin_right = 1040.0
margin_bottom = 190.0
scene_to_load = "EXIT"

[node name="Version" type="Label" parent="Menu"]
margin_top = 448.0
margin_right = 1040.0
margin_bottom = 509.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "VERSION 0.0.1
RobThePole"
align = 1

[node name="FadeIn" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
